--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+
+.row-header {
+    margin: 0px auto;
+    padding: 0px auto;
+}
+.ten-project{
+    height: inherit;
+    color: #55a2d6;
+    font-family: Helvetica;
+    margin-top: 5%;
+}
+.navBar{
+    font-size: large;
+}
+.jumbotron {
+    padding: 20px 0px 20px 0px;
+    margin: 0px auto;
+    background: #f5f5f5;
+    color: #0f0f0f;
+    text-align: center;
+    font-size: medium;
+}
+.subtitle{
+    color:#888888;
+    text-align: center;
+}
+.footer{
+    margin: 0px auto;
+    padding: 10px 0px 10px 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+.address {
+    font-size: 80%;
+    margin: 0px;
+    color: #0f0f0f;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card{
+    
+    margin-bottom: 20px;
+}
+.card-header{
+    margin: 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.row-why{
+    background-color: #dee5e9;
+    padding: 10px 0px 10px 0px;
+
+}
+.row-title{
+    color: #166296;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.fa-why{
+    color:#2574a8;
+}
+.title-why{
+    color: #2574a8;
+}
+.content-why{
+    color: #797979;
+    text-align: justify;
 }
 
-.App-link {
-  color: #61dafb;
+.bg-signup{
+    padding: 50px 100px 30px 100px;
+    margin: 0px auto;
+    color: #666666;
+    text-align: center;
+    margin-top: 20px;
+    background: #ece9e9;;
+}
+.video{
+    margin-top: 18px;
+    margin-bottom: 20px;
+    display: flex;
+    top: 50%;
+    left: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
