--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,10 @@
     margin: 0px auto;
     padding: 10px 0px 10px 0px;
 }
-
-
+.content{
+    margin-top: 20px;
+    margin-bottom: 20px ;
+}
 
 .address {
     font-size: 80%;
@@ -38,11 +40,11 @@
 }
 
 .card{
-    
     margin-bottom: 20px;
 }
-.card-header{
-    margin: 0px;
+.card-text{
+    text-align: justify;
+    color:#888888;
 }
 
 
@@ -69,12 +71,12 @@
 }
 
 .bg-signup{
-    padding: 50px 100px 30px 100px;
-    margin: 0px auto;
+    padding: 15px 10px 15px 10px;
     color: #666666;
-    text-align: center;
     margin-top: 20px;
-    background: #ece9e9;;
+    margin-bottom: 20px;
+    background: #ece9e9;
+    font-size: large;
 }
 .video{
     margin-top: 18px;
