--- a/src/components/StudentPage/Student.css
+++ b/src/components/StudentPage/Student.css
@@ -1,3 +1,11 @@
+.ten-project{
+    color: #55a2d6;
+    font-family: Helvetica;
+}
+.navBarDetail{
+    background-color: white;
+    padding: 0px 150px 0px 150px;
+}
 .detailPage{
     background-color: rgb(231, 228, 228);
     border-top:  rgb(231, 228, 228);
@@ -8,6 +16,18 @@
     margin-top: 20px;
     margin-bottom: 20px ;
     
+}
+.leftCol{
+    flex: 2;
+    margin-right: 10px;
+    max-width: 1050px;
+    display: flexbox;
+}
+.rightCol{
+    flex: 1;
+    display: flexbox;
+    max-width: 350px;
+    margin-left: 10px;
 }
 
 .bg-row{
