--- a/src/components/StudentPage/Student.css
+++ b/src/components/StudentPage/Student.css
@@ -10,12 +10,17 @@
     background-color: rgb(231, 228, 228);
     border-top:  rgb(231, 228, 228);
     margin-top: 70px;
+    height: inherit;
 }
 
 .content{
     margin-top: 20px;
     margin-bottom: 20px ;
     
+}
+.centerCol{
+    max-width: 1050px;
+    display: flexbox;
 }
 .leftCol{
     flex: 2;
@@ -54,4 +59,19 @@
 .fa-custome{
     color:  #beb7b7e5;
     
+}
+
+.badge{
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    padding: 5px 10px;
+    border-radius: 50%;
+    background: red;
+    color: white;
+}
+
+
+.action{
+    margin-right: 20px;
 }
