improve get api in funtions

--- a/src/components/StudentPage/Student.css
+++ b/src/components/StudentPage/Student.css
@@ -7,8 +7,8 @@
     padding: 0px 150px 0px 150px;
 }
 .detailPage{
-    background-color: rgb(231, 228, 228);
-    border-top:  rgb(231, 228, 228);
+    background-color: #F8F8F8;
+    border-top:  #F8F8F8;
     margin-top: 70px;
     height: inherit;
 }
