--- a/src/components/TeacherPage/Teacher.css
+++ b/src/components/TeacherPage/Teacher.css
@@ -76,18 +76,21 @@
     margin-right: 20px;
 }
 
-.scrollbar
-{
-	float: left;
-    height: 400px;
-	width: 360px;
-	padding-right: 10px;
-	overflow-y: scroll;
-
-}
 
 .force-overflow
 {
 	min-height: 90%;
     margin-left: 10px;
+}
+
+.white{
+    white-space: pre-line;
+}
+
+.scroll{
+    width: 540px;
+    height: 340px;
+    float: left;
+    overflow-y: scroll;
+    padding-right: 10px;
 }
