--- a/src/components/HomePage/home.css
+++ b/src/components/HomePage/home.css
@@ -21,6 +21,11 @@
     margin-top: 100px;
 }
 
+.imglogolite{
+    width: 300px;
+    margin-top: 100px;
+}
+
 
 @media (max-width: 992px) {
     .imglogo{
@@ -42,3 +47,6 @@
 
 }
 
+.nav-option a{
+    color: #2596be
+}
