--- a/src/components/Register/register.css
+++ b/src/components/Register/register.css
@@ -7,3 +7,15 @@
 .coverletter{
     padding: 0px 95px;
 }
+
+.card-register {
+    background: #fff;
+    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+      transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+  border-radius: 25px;
+  padding: 20px;
+}
+
+.register-input {
+    border-radius: 10px;
+}
