--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
     font-family: Helvetica;
     margin-top: 5%;
 }
-.navBar{
+.navBarx{
     font-size: large;
     background-color: white;
     padding: 0px 100px 0px 100px;
